--- a/Livraria.UI.SIte/Views/_ViewImports.cshtml
+++ b/Livraria.UI.SIte/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-@using Livraria.UI.SIte
-@using Livraria.UI.SIte.Models
+@using Livraria.UI.Site
+@using Livraria.UI.Site.Models
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Livraria.UI.Site
